tests/netconvert/import/XML/errors/node_id_invalid/errors.netconvert
Error: Invalid node id 'broken id'.
Error: No edges loaded.
Quitting (on error).
